provides link to proper image url

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
     </section>
 
     <div class="container">
-      
+
       <h1 class="title is-spaced pad-title">Select Egg Series</h1>
 
       <div id="eggList">
-        <input id="e1" type="radio" value="eggSeries1" name="radioButton"> Egg Series 1 <br>
-        <input id="e2" type="radio" value="eggSeries2" name="radioButton"> Egg Series 2 <br>
+        <input id="e1" type="radio" value="egg_series_1" name="radioButton"> Egg Series 1 <br>
+        <input id="e2" type="radio" value="egg_series_2" name="radioButton"> Egg Series 2 <br>
       </div>
 
 
@@ -37,7 +37,7 @@
 
     </div>
 
-     <!-- element will be left empty --> 
+     <!-- element will be left empty -->
 
   </body>
 
