added comments and rpCounter

--- a/index.html
+++ b/index.html
@@ -28,11 +28,16 @@
       </div>
 
 
-      <div class="something">
+      <div class="placeholder1">
         <img id="eggResult" src="">
         <button id="eggRollBtn" class="button is-primary">
           test button
         </button>
+      </div>
+
+      <div class="placeholder2">
+        <p id="rp-counter">0</p>
+        <p> RP Counter </p>
       </div>
 
     </div>
