added ultimateskin counter

--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
         <p> USD </p>
       </div>
 
+      <div class="placeholder4">
+        <p id="skin-counter">0</p>
+        <p> Spirit Guard Udyr's </p>
+      </div>
+
     </div>
 
 
