removed bulma from index.html

--- a/index.html
+++ b/index.html
@@ -1,26 +1,23 @@
 <html>
   <header>
     <title>little legends roulette</title>
-    <link rel="stylesheet" href="https://unpkg.com/bulmaswatch/flatly/bulmaswatch.min.css">
     <link rel="stylesheet" type="text/css" href="/index.css">
   </header>
 
   <body>
 
-    <section class="hero is-primary is-bold is-medium">
-      <div class="hero-body">
-        <div class="container">
-          <h1 class="title is-1 is-spaced">
-            Little Legends Egg Simulator
-          </h1>
-          <p class="subtitle is-4">Dedicated to helping your gacha game addiction</p>
-        </div>
-      </div>
-    </section>
+    <!-- TItle -->
+    <div class="container">
+      <h1>
+        Little Legends Egg Simulator
+      </h1>
+      <p>Dedicated to helping your gacha game addiction</p>
+    </div>
 
+    <!-- the app -->
     <div class="container">
 
-      <h1 class="title is-spaced pad-title">Select Egg Series</h1>
+      <h1>Select Egg Series</h1>
 
       <div id="eggList">
         <input id="e1" type="radio" value="egg_series_1" name="radioButton"> Egg Series 1 <br>
