--- a/index.html
+++ b/index.html
@@ -2,54 +2,68 @@
   <header>
     <title>little legends roulette</title>
     <link rel="stylesheet" type="text/css" href="/index.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700&display=swap" rel="stylesheet">
   </header>
 
   <body>
+    <div class="content">
+      <div class="container">
+        <h1>
+          <span>Little Legends Egg Simulator</span>
+        </h1>
+        <p>Dedicated to helping your gacha game addiction</p>
+      </div>
 
-    <!-- TItle -->
-    <div class="container">
-      <h1>
-        Little Legends Egg Simulator
-      </h1>
-      <p>Dedicated to helping your gacha game addiction</p>
+      <!-- the app -->
+      <div class="container">
+        <h2>Select Egg Series:</h1>
+        <div id="eggList">
+          <input id="e1" type="radio" value="egg_series_1" name="radioButton"> Egg Series 1 <br>
+          <input id="e2" type="radio" value="egg_series_2" name="radioButton"> Egg Series 2 <br>
+        </div>
+
+        <div class="flex-container">
+          <div class="placeholder1">
+            <img id="eggResult" width="300px" height="300px" src="">
+            <button id="eggRollBtn" class="button is-primary">
+              test button
+            </button>
+          </div>
+          <!--
+          <div class="box box--font">
+            <div class="flex-container box--font-center">
+              <p id="rp-counter">0</p>
+              <p class="box--padding"> RP </p>
+            </div>
+
+            <div class="flex-container box--font-center">
+              <p> $ </p>
+              <p class="box--padding" id="usd-counter">0</p>
+            </div>
+
+            <div class="flex-container box--font-center">
+              <p id="skin-counter">0</p>
+            </div>
+            <span>Ultimate Skins</span>
+          </div>
+        -->
+        </div>
+      </div>
     </div>
-
-    <!-- the app -->
-    <div class="container">
-
-      <h1>Select Egg Series</h1>
-
-      <div id="eggList">
-        <input id="e1" type="radio" value="egg_series_1" name="radioButton"> Egg Series 1 <br>
-        <input id="e2" type="radio" value="egg_series_2" name="radioButton"> Egg Series 2 <br>
+    <footer class="footer">
+      <div class="footer__widget">
+        <p id="rp-counter" class="footer__widget--underline">0</p>
+        <p class="footer__widget--padding"> RP </p>
       </div>
-
-
-      <div class="placeholder1">
-        <img id="eggResult" width="300px" height="300px" src="">
-        <button id="eggRollBtn" class="button is-primary">
-          test button
-        </button>
+      <div class="footer__widget">
+        <p> $ </p>
+        <p class="footer__widget--padding footer__widget--underline" id="usd-counter">0</p>
       </div>
-
-      <div class="placeholder2">
-        <p id="rp-counter">0</p>
-        <p> RP Counter </p>
+      <div class="footer__widget">
+        <p id="skin-counter" class="footer__widget--underline">0</p>
+        <p class="footer__widget--padding">Spirit Guard Udyr's</p>
       </div>
-
-      <div class="placeholder3">
-        <p id="usd-counter">0</p>
-        <p> USD </p>
-      </div>
-
-      <div class="placeholder4">
-        <p id="skin-counter">0</p>
-        <p> Spirit Guard Udyr's </p>
-      </div>
-
-    </div>
-
-
+    </footer>
   </body>
 
   <script src="/index.js"></script>
