changed src files to absolute path for github pages

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <header>
     <title>little legends roulette</title>
-    <link rel="stylesheet" type="text/css" href="/index.css">
+    <link rel="stylesheet" type="text/css" href="http://ericrng.me/littlelegends-egg-sim/index.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700&display=swap" rel="stylesheet">
     <!--<script src="https://kit.fontawesome.com/b300a3acd8.js"></script>-->
   </header>
@@ -67,6 +67,6 @@
 
   </body>
 
-  <script src="/index.js"></script>
-  <script type="text/javascript" src="/littlelegends.js"></script>
+  <script src="http://ericrng.me/littlelegends-egg-sim/index.js"></script>
+  <script type="text/javascript" src="http://ericrng.me/littlelegends-egg-sim/littlelegends.js"></script>
 </html>
