--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <header>
     <title>little legends roulette</title>
-    <link rel="stylesheet" type="text/css" href="https://nacleric.github.io/littlelegends-egg-sim/index.css">
+    <link rel="stylesheet" type="text/css" href="/index.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700&display=swap" rel="stylesheet">
     <!--<script src="https://kit.fontawesome.com/b300a3acd8.js"></script>-->
   </header>
