switched to a different cdn

--- a/index.html
+++ b/index.html
@@ -67,6 +67,6 @@
 
   </body>
 
-  <script src="https://nacleric.github.io/littlelegends-egg-sim/index.js"></script>
-  <script type="text/javascript" src="https://nacleric.github.io/littlelegends-egg-sim/littlelegends.js"></script>
+  <script src="/index.js"></script>
+  <script type="text/javascript" src="/littlelegends.js"></script>
 </html>
